exercicio 11.6 - com novo comentario

--- a/app/views/qualificacoes/show.html.erb
+++ b/app/views/qualificacoes/show.html.erb
@@ -20,5 +20,7 @@
 
 <%= comentarios @qualificacao %>
 
+<%= novo_comentario @qualificacao %>
+
 <%= link_to 'Edit', edit_qualificacao_path(@qualificacao) %> |
 <%= link_to 'Back', qualificacoes_path %>
