--- a/app/views/comentarios/new.html.erb
+++ b/app/views/comentarios/new.html.erb
@@ -1,23 +1,16 @@
 <h1>New comentario</h1>
 
-<% form_for(@comentario) do |f| %>
+<% remote_form_for(@comentario) do |f| %>
   <%= f.error_messages %>
 
   <p>
     <%= f.label :conteudo %><br />
     <%= f.text_area :conteudo %>
   </p>
-  <p>
-    <%= f.label :comentavel_id %><br />
-    <%= f.text_field :comentavel_id %>
-  </p>
-  <p>
-    <%= f.label :comentavel_type %><br />
-    <%= f.text_field :comentavel_type %>
-  </p>
+    <%= f.hidden_field :comentavel_type %>
+    <%= f.hidden_field :comentavel_id %>
   <p>
     <%= f.submit 'Create' %>
   </p>
 <% end %>
 
-<%= link_to 'Back', comentarios_path %>
